# networks-itmo-2017

mdns/: mdns.cabal  stack.yaml
mdns/src/: Main.hs  Options.hs
ymdns/: .gitignore  stack.yaml  ymdns.cabal
ymdns/src/: FileSharing.hs  Main.hs  Options.hs  Resolving.hs
