name:                ymdns
version:             0.1.0.0
synopsis:            Yoba MDNS protocol implementation w/ files sharing
license:             GPL-3
license-file:        LICENSE
author:              Mikhail Volkhov
maintainer:          volhovm.cs@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable ymdns-cli
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Options
  build-depends:       base >=4.9 && <4.10
                     , directory >= 1.3.0.0
                     , filepath >= 1.4.1.1
                     , optparse-applicative >= 0.13.1.0
                     , optparse-simple >= 0.0.3
                     , universum >= 0.2.1
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:  GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
