name:                ymdns
version:             0.1.0.0
synopsis:            Yoba MDNS protocol implementation w/ files sharing
license:             GPL-3
license-file:        LICENSE
author:              Mikhail Volkhov
maintainer:          volhovm.cs@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable ymdns-cli
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Options
                     , FileSharing
                     , Resolving
  build-depends:       base >=4.9 && <4.10
                     , bytestring >= 0.10.8.1
                     , containers
                     , directory >= 1.3.0.0
                     , filepath >= 1.4.1.1
                     , hashable
                     , http-types >= 0.9.1
                     , lens
                     , lifted-base
                     , network
                     , network-multicast
                     , network-uri >= 2.6.1.0
                     , optparse-simple >= 0.0.3
                     , random >= 1.1
                     , scotty >= 0.11.0
                     , stm >= 2.4.4.1
                     , stm-delay
                     , store >= 0.3.1
                     , text >= 1.2.2.1
                     , time >= 1.6.0.1
                     , universum >= 0.2.1
                     , wai-extra >= 3.0.19.1
                     , warp >= 3.2.11
                     , wreq >= 0.5.0.0
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:  GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
